Bug 1204366 - [RTL] Searchbar's dropdown in wrong positions, r=dao.
UltraBlame original commit: 4915ce29449ef3595957114ecdff8d036b72f238

--- a/browser/themes/linux/searchbar.css
+++ b/browser/themes/linux/searchbar.css
@@ -3,7 +3,14 @@
 
 
 #PopupSearchAutoComplete {
-  margin-inline-start: -24px;
+  
+
+
+
+
+
+  margin-inline-start: -23px;
+  margin-inline-end: -16px;
   padding: 1px;
 }
 
