--- a/browser/themes/osx/searchbar.css
+++ b/browser/themes/osx/searchbar.css
@@ -3,7 +3,14 @@
 
 
 #PopupSearchAutoComplete {
+  
+
+
+
+
+
   margin-inline-start: -23px;
+  margin-inline-end: -21px;
 }
 
 .searchbar-textbox {
