--- a/browser/themes/windows/searchbar.css
+++ b/browser/themes/windows/searchbar.css
@@ -3,7 +3,14 @@
 
 
 #PopupSearchAutoComplete {
+  
+
+
+
+
+
   margin-inline-start: -25px;
+  margin-inline-end: -18px;
 }
 
 .autocomplete-textbox-container {
